@@ -1,6 +1,7 @@
 <span flexy:if="msgGet()">{msgGet()}</span>
 
 <!-- If not a static article display option blocks -->
+
 {if:staticArticle}
     <div id="staticArticle">
         {if:leadArticle} 
